crystal-facet-uml (1.24.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * moving ports follow the cursor more accurate

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 11 Oct 2020 20:30:00 +0200

crystal-facet-uml (1.24.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * XMI(TM) export reflects containment-hierarcy of elements
  * XMI(TM) export automatically disambiguates between activity/state contexts
  * warnings are printed to xml export if model is not uml compliant
  * no arrow tip at communication path
  * export shows statistics on diagrams or classifiers
  * internal: messages to user user are typesafe for their parameters

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 08 Oct 2020 20:30:00 +0200

crystal-facet-uml (1.23.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * XMI(TM) export good enough to be checked by NIST validator

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 06 Sep 2020 11:30:00 +0200

crystal-facet-uml (1.23.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * at operations cut, copy, paste and delete: print understandable statistics
  * at operations undo, redo: print understandable statistics
  * layouting of classifiers improved
  * experimental xmi export

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 15 Jun 2020 11:30:00 +0200

crystal-facet-uml (1.22.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * the xhtml export produces a table-of-contents
  * the xhtml+db exports generate links to diagrams by D0001#name.
  * the element configuration area on the right does not take space needed
    by the drawing area
  * yellow highlighted names are drawn behind the classifier-contour-line

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 01 May 2020 17:30:00 +0200

crystal-facet-uml (1.21.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * containers embrace their children keeping wider gaps

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 12 Apr 2020 16:30:00 +0200
