@@ -2,6 +2,7 @@ crystal-facet-uml (1.24.1) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
   * moving ports follow the cursor more accurate
+  * layouting containments does not reserve columns/rows for the container
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 11 Oct 2020 20:30:00 +0200
 
